[gd_scene load_steps=5 format=3 uid="uid://c0i8qy2uwtd34"]

[ext_resource type="Script" path="res://components/trash/trash.gd" id="1_nqipj"]
[ext_resource type="Texture2D" uid="uid://cpjisbyi4accm" path="res://images/trash_closed.png" id="2_5ups2"]
[ext_resource type="Texture2D" uid="uid://dboedenbhybna" path="res://images/trash_open.png" id="3_kkkoc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxcpp"]
size = Vector2(128, 164)

[node name="Trash" type="Node2D"]
script = ExtResource("1_nqipj")

[node name="SpriteHolder" type="Node2D" parent="."]
scale = Vector2(0.256765, 0.223255)

[node name="ClosedSprite" type="Sprite2D" parent="SpriteHolder"]
unique_name_in_owner = true
texture = ExtResource("2_5ups2")

[node name="OpenSprite" type="Sprite2D" parent="SpriteHolder"]
unique_name_in_owner = true
texture = ExtResource("3_kkkoc")

[node name="TrashArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrashArea"]
position = Vector2(0, 22)
shape = SubResource("RectangleShape2D_xxcpp")
